WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104425
JSC::ArrayConstructor header missing ArrayAllocationProfile forward declaration
https://bugs.webkit.org/show_bug.cgi?id=104425
Summary
JSC::ArrayConstructor header missing ArrayAllocationProfile forward declaration
Jonathan Liu
Reported
2012-12-07 18:35:50 PST
The header for the JSC::ArrayConstructor class is missing a forward declaration for the ArrayAllocationProfile class which causes compilation to fail when compiling with MinGW-w64.
Attachments
Patch
(1.18 KB, patch)
2012-12-07 18:38 PST
,
Jonathan Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Liu
Comment 1
2012-12-07 18:38:36 PST
Created
attachment 178322
[details]
Patch
Kentaro Hara
Comment 2
2012-12-07 21:21:01 PST
Comment on
attachment 178322
[details]
Patch looks ok
WebKit Review Bot
Comment 3
2012-12-07 21:36:47 PST
Comment on
attachment 178322
[details]
Patch Clearing flags on attachment: 178322 Committed
r137017
: <
http://trac.webkit.org/changeset/137017
>
WebKit Review Bot
Comment 4
2012-12-07 21:36:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug