Add missing forward declaration for JSC::ArrayAllocationProfile https://bugs.webkit.org/show_bug.cgi?id=104425

Patch by Jonathan Liu <net147@gmail.com> on 2012-12-07
Reviewed by Kentaro Hara.

The header for the JSC::ArrayConstructor class is missing a forward
declaration for the JSC::ArrayAllocationProfile class which causes
compilation to fail when compiling with MinGW-w64.

* runtime/ArrayConstructor.h:
(JSC):

Canonical link: https://commits.webkit.org/122591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137017 268f45cc-cd09-0410-ab3c-d52691b4dbfc