Source/JavaScriptCore/runtime/ArrayConstructor.h
@@ -25,6 +25,7 @@
 
 namespace JSC {
 
+class ArrayAllocationProfile;
 class ArrayPrototype;
 class JSArray;
 
